projects/nanousd-labs/nanousd/tests/usda/invalid/float_plus_inf.usda
#usda 1.0

def Scope "Bad"
{
    float value = +inf
}
